# DNAPCA

./: CMakeLists.txt  README.md  setup.py
common/include/: Config.h
dnapca/: single_node_pca.cpp
dnapcapy/: CMakeLists.txt  dnapcapy.py  dnapcapy_Wrapper.cpp
